tests/reference/asr-subroutine5-7b7b5da.stderr
warning: Implied save feature
 --> tests/errors/subroutine5.f90:2:1
  |
2 | real, intent(in) :: a, b
  | ^^^^^^^^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/subroutine5.f90:2:1
  |
2 | real, intent(in) :: a, b
  | ^^^^^^^^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/subroutine5.f90:3:1
  |
3 | real, intent(out) :: c
  | ^^^^^^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: Variable 'd' is not declared
 --> tests/errors/subroutine5.f90:4:9
  |
4 | c = a + d
  |         ^ 'd' is undeclared
